name:                trasa-bittrex
version:             0.1.0.0
synopsis:            Well typed bittrex api bindings with trasa
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2017 Kyle McKean
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bittrex.API
                     , Bittrex.Money
                     , Bittrex.Types
  build-depends:       base >=4.10 && <4.11
                     , text         == 1.2.*
                     , vector       == 0.12.*
                     , aeson        == 1.2.*
                     , safe-money   == 0.3.*
                     , http-client  == 0.5.*
                     , trasa        == 0.3.*
                     , trasa-client == 0.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
